# daker

./: .gitignore  README.md  admin-비밀번호-초기화.bat  dashboard.html  vibe-x-docker-실행.bat  vibe-x-대시보드-실행.bat  vibe-x-대시보드-실행하고-브라우저열기.bat
docu/: VIBE-X_구현_가이드.md  VIBE-X_세부작업_기획안.md  VIBE-X_통합협업플랫폼_기획서.html  codebase_rag_proposal.html  codebase_rag_proposal.md  generate_pdf.py  generate_slides_pdf.py  바이브코딩_design.json  바이브코딩_개선_아이디어.md  바이브코딩_프레젠테이션.html  사용법.md  질문1.md  질문2.md  질문3.md  질문4.md  질문6.md
mcp/: VIBE-X_MCP_서버_가이드.md  mcp.json  mcp_server.py
mcp/배포/: build.py
mcp/배포/pip/vibe-x-mcp/: README.md  pyproject.toml
mcp/배포/pip/vibe-x-mcp/vibe_x_mcp/: server.py
mcp/배포/pip/vibe-x-mcp/vibe_x_mcp/src/layer2_rag/: chunker.py  gate_basic.py  meta_generator.py  searcher.py
mcp/배포/pip/vibe-x-mcp/vibe_x_mcp/src/layer3_agents/: __init__.py  integration_agent.py  review_agent.py
mcp/배포/pip/vibe-x-mcp/vibe_x_mcp/src/layer4_collab/: mcp_server.py
mcp/배포/pip/vibe-x-mcp/vibe_x_mcp/src/layer5_dashboard/: __init__.py  alert_system.py  project_context.py  project_registry.py
mcp/배포/pip/vibe-x-mcp/vibe_x_mcp/src/shared/: types.py
vibe-x/: .dockerignore  .gitignore  Dockerfile.backend  architecture-map.md  cli.py  coding-rules.md  docker-compose.yml  memory.md  project-definition.md  requirements.txt  server.py
vibe-x-extension/: package.json
vibe-x-extension/src/: dashboard-panel.ts  extension.ts  gate-runner.ts  i18n.ts  statusbar.ts
vibe-x/cursor-vibex/: package-lock.json  package.json
vibe-x/dashboard/: .dockerignore  Dockerfile  next.config.ts  package.json  (+1 more)
(+72 files in other folders)
